--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -4,60 +4,58 @@
         <h3>Mantenimiento de clientes </h3>
     </div>
     <div class="row mt-5">
-        <form (ngSubmit)="registrarCliente()" novalidate #f="ngForm">
+        <form [formGroup]="formLogin">
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="form-group row">
                         <label for="nombres" class="col-sm-2 control-label">Nombres: </label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" name="nombres" id="nombres" [(ngModel)]="cliente.nombres">
+                            <input type="text" class="form-control" name="nombres" id="nombres" formControlName="nombres">
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for="nombres" class="col-sm-2 control-label">Apellido Paterno: </label>
+                        <label for="apellidoPaterno" class="col-sm-2 control-label">Apellido Paterno: </label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" name="nombres" id="nombres"
-                                [(ngModel)]="cliente.apellidoPaterno">
+                            <input type="text" class="form-control" name="apellidoPaterno" id="apellidoPaterno" formControlName="apellidoPaterno">
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for="nombres" class="col-sm-2 control-label">Apellido Materno: </label>
+                        <label for="apellidoMaterno" class="col-sm-2 control-label">Apellido Materno: </label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" name="nombres" id="nombres"
-                                [(ngModel)]="cliente.apellidoMaterno">
+                            <input type="text" class="form-control" name="apellidoMaterno" id="apellidoMaterno" formControlName="apellidoMaterno">
                         </div>
                     </div>
                     <div class="form-group form-inline row">
                         <label class="col-sm-2 control-label">Sexo: </label>
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" name="sexos" id="masculino" value="Masculino" [(ngModel)]="cliente.sexo"  >
+                            <input class="form-check-input" type="radio" name="sexo" id="masculino" value="Masculino"  formControlName="sexo">
                             <label class="form-check-label" for="masculino">Masculino</label>
-                            <input class="form-check-input" type="radio" name="sexos" id="femenino" value="Femenino" [(ngModel)]="cliente.sexo" >
+                            <input class="form-check-input" type="radio" name="sexo" id="femenino" value="Femenino" formControlName="sexo">
                             <label class="form-check-label " for="femenino">Femenino</label>
                         </div>
                       
                     </div>
                 </div>
+
             </div>
             <div class="col-md-6">
                 <div class="panel panel-default">
                     <div class="form-group row">
                         <label for="date" class="col-sm-2 control-label">Fecha de Nacimiento: </label>
                         <div class="col-sm-10">
-                            <input type="date" class="form-control" name="date" id="date" [(ngModel)]="cliente.fechaNacimiento">
+                            <input type="date" class="form-control" name="fechaNacimiento" id="date" value='fechaNacimiento | date:"dd-MM-yyyy"' formControlName="fechaNacimiento">
                         </div>
                     </div>
                     <div class="form-group row">
                         <label for="direccion" class="col-sm-2 control-label">Dirección: </label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" name="direccion" id="direccion"
-                                [(ngModel)]="cliente.direccion">
+                            <input type="text" class="form-control" name="direccion" id="direccion" formControlName="direccion">
                         </div>
                     </div>
                     <div class="form-group row">
                         <label for="email" class="col-sm-2 control-label">Correo eletrónico: </label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" name="email" id="email" [(ngModel)]="cliente.email">
+                            <input type="text" class="form-control" name="email" id="email" formControlName="email">
                         </div>
                     </div>
                 </div>
@@ -65,9 +63,9 @@
             <div class="col-md-2">
                 <div class="panel panel-default">
                     <div class="form-group row">
-                        <button class="btn btn-primary btn-block" [disabled]="!f.valid">Registrar</button>
-                        <button class="btn btn-primary btn-block" (click)="updateCliente()">Actualizar</button>
-                        <button class="btn btn-primary btn-block" (click)="deleteCliente()">Eliminar</button>
+                        <button class="btn btn-primary btn-block" type="submit" (click)="registrarCliente()" [disabled]="formLogin.invalid">Registrar</button>
+                        <button class="btn btn-primary btn-block" type="button" (click)="updateCliente()">Actualizar</button>
+                        <button class="btn btn-primary btn-block" type="button" (click)="deleteCliente()">Eliminar</button>
                     </div>
                 </div>
             </div>
